invoice dialog spacing fixed

--- a/src/app/ng-modules/reporting/components/invoice-dialog/invoice-dialog.component.sass
+++ b/src/app/ng-modules/reporting/components/invoice-dialog/invoice-dialog.component.sass
@@ -26,3 +26,6 @@ h3
 
 .mat-card-title
   margin-bottom: $mat-card-title-bottom-margin
+
+.xlsx-download
+  margin-top: 18.8125px !important
